[package]
name = "catppuccin-catwalk"
description = "🚶 Soothing pastel previews for the high-spirited!"
authors = ["Catppuccin Org <releases@catppuccin.com>"]
repository = "https://github.com/catppuccin/catwalk"
license = "MIT"
version = "1.3.1"
edition = "2021"

[profile.release]
lto = true
opt-level = "s"
strip = true

[[bin]]
name = "catwalk"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/catwalk-{ target }{ archive-suffix }"
pkg-fmt = "bin"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "1"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = { version = "4.5.2" }
color-eyre = { version = "0.6.3", default-features = false }
ril = { version = "0.10.1", default-features = false, features = [
  "png",
  "resize",
  "webp",
] }

[target.'cfg(target_family = "wasm")'.dependencies]
js-sys = "0.3.69"
ril = { version = "0.10.1", default-features = false }
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["ImageData"] }
getrandom = { version = "0.2.15", features = ["js"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O3']
